fixing cms admin pages
