# app/models/cms_component.rb
@@ -3,10 +3,10 @@
 # app/models/cms_component.rb
 class CmsComponent < ApplicationRecord
   has_many :section_components, class_name: 'CmsSectionComponent', foreign_key: 'componentid', dependent: :destroy
-  validates :component_name, :component_type, presence: true
+  validates :componentname, :component_type, presence: true
 
   def self.ransackable_attributes(_auth_object = nil)
-    %w[id component_name component_type]
+    %w[id componentname component_type]
   end
 
   def self.ransackable_associations(_auth_object = nil)
