# app/models/cms_page.rb
@@ -3,10 +3,10 @@
 # app/models/cms_page.rb
 class CmsPage < ApplicationRecord
   has_many :page_sections, class_name: 'CmsPageSection', dependent: :destroy
-  validates :page_name, presence: true
+  validates :pagename, presence: true
 
   def self.ransackable_attributes(_auth_object = nil)
-    %w[id page_name]
+    %w[id pagename]
   end
 
   def self.ransackable_associations(_auth_object = nil)
